:zap: ContextPathCompositeHandler